tests/negative/MicroJuvix/NoStrictlyPositiveDataTypes/E3.mjuvix
module E3;

axiom B : Type;
inductive X  {
  c : B -> (X -> B) -> X;
};

end;
